# pico_think

./: .gitignore  README.md  TODO.md  bash.exe.stackdump  config.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: manifest.json
data/theology/: openbible.jsonl
pico_think/: __init__.py  config.py  dataset.py  decoder.py  encoder.py  mla.py  model.py  sleep.py  training_utils.py  vector_store.py
pico_think/experts/: __init__.py  diffuser_expert.py  state_space_expert.py  transformer_expert.py
scripts/: chat.py  pretrain_diffuser.py  pretrain_state_space.py  pretrain_transformer.py  sleep_consolidation.py  train_full.py  train_tokenizer.py
